--- a/css/logotipo.css
+++ b/css/logotipo.css
@@ -5,13 +5,6 @@
     height: 36px;
 }
 
-@media screen and (max-width: 768px) {
-    .logotipo {
-        margin: 0;
-        margin-top: 30px;
-    }
-}
-
 @media screen and (max-width: 375px) {
     .logotipo {
         margin: 0;
@@ -19,5 +12,12 @@
     }
     .logo {
         margin-left: -10px;
+    }
+}
+
+@media screen and (min-width: 376px) and (max-width: 768px) {
+    .logotipo {
+        margin: 0;
+        margin-top: 30px;
     }
 }
